--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,92 @@
   pointer-events: none;
 }
 
+body {
+  padding: 20px;
+  text-align: center;
+  background-color: #fafafa;
+}
+
+.image-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.image-card {
+  width: 450px;
+  border: 1px solid #00000020;
+  border-radius: 2px;
+  text-align: left;
+  background-color: white;
+}
+
+.image {
+  width: 450px;
+}
+
+.title {
+  text-align: left;
+  padding: 5px 7px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: #000000dd;
+}
+
+.season {
+  text-align: left;
+  padding: 5px 7px;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: #000000dd;
+}
+
+.likes-section {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.likes {
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.like-button {
+  color: rgb(255, 127, 80);
+  font-size: 1.5rem;
+  border: none;
+  background: none;
+  transition: color 300ms;
+  cursor: pointer;
+}
+
+.like-button:hover {
+  color: rgb(241, 71, 19);
+}
+
+.like-button:active {
+  color: rgb(253, 159, 124);
+}
+
+.like-button:focus {
+  outline: none;
+}
+
+.description {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 10px;
+  font-size: 0.85rem;
+}
+
+.description li {
+  margin: 2px 0;
+  letter-spacing: 0.2px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
