--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  justify-content: center;
 }
 
 .App-logo {
@@ -10,40 +11,49 @@
 body {
   padding: 20px;
   text-align: center;
-  background-color: #fafafa;
+  background-color: white;
+  justify-content: center;
 }
 
 .image-container {
   width: 100%;
   display: flex;
-  justify-content: center;
   padding: 20px;
+  margin-top: 40px;
+  justify-content: center;
 }
 
 .image-card {
   width: 450px;
   border: 1px solid #00000020;
   border-radius: 2px;
+  margin-top: -10px;
   text-align: left;
-  background-color: white;
+  background-color: #e2d4cc;
+  justify-content: center;
 }
 
 .image {
-  width: 450px;
+  width: 100%;
+}
+
+.cards {
+  justify-content: center;
+  display: inline-block;
 }
 
 .title {
   text-align: left;
   padding: 5px 7px;
-  font-size: 1.4rem;
+  font-size: 1.7rem;
   font-weight: 600;
   color: #000000dd;
 }
 
 .season {
   text-align: left;
-  padding: 5px 7px;
-  font-size: 0.9rem;
+  padding-left: 5px;
+  font-size: 1rem;
   font-weight: 600;
   color: #000000dd;
 }
@@ -93,6 +103,108 @@ body {
   letter-spacing: 0.2px;
 }
 
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: #67576b;
+  border-bottom: 1px solid #dfdfdf;
+  display: flex;
+  justify-content: center;
+  padding: 5px 0;
+}
+
+.nav-wrapper {
+  width: 100%;
+  max-width: 1050px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.brand-img {
+  height: 230%;
+}
+
+.search-box {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 200px;
+  height: 25px;
+  background: #fafafa;
+  border: 1px solid #dfdfdf;
+  border-radius: 2px;
+  color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.search-box::placeholder {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.nav-items {
+  height: 22px;
+  position: relative;
+}
+
+.history-button {
+  height: 150%;
+  margin-right: 5px;
+}
+
+.form-button {
+  height: 150%;
+  padding-right: 9px;
+  padding-left: 9px;
+  padding-top: 2px;
+}
+
+.like-history {
+  border: solid black 1px;
+  background: white;
+  padding: 0.4em;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.like-entry {
+  text-align: left;
+  margin: 0px;
+  font: sans-serif;
+  font-size: 0.7em;
+}
+
+form.new-drink-form {
+  border: solid black 1px;
+  width: 255px;
+  height: 285px;
+  background-color: white;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+}
+
+form.new-drink-form > input {
+  font-size: 1em;
+  font-family: sans-serif;
+  margin-top: 0.2em;
+  margin-bottom: 0.7em;
+}
+form.new-drink-form > textarea {
+  font-size: 1em;
+  font-family: sans-serif;
+  text-align: left;
+  height: 160px;
+  margin-top: 0.2em;
+  margin-bottom: 0.7em;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -108,10 +220,6 @@ body {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
