--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  padding: 20px;
+  padding-top: 20px;
   text-align: center;
   background-color: white;
   justify-content: center;
@@ -27,7 +27,6 @@ body {
   width: 450px;
   border: 1px solid #00000020;
   border-radius: 2px;
-  margin-top: -10px;
   text-align: left;
   background-color: #e2d4cc;
   justify-content: center;
